working on first window

--- a/app/imports/ui/pages/landing/landing-page.html
+++ b/app/imports/ui/pages/landing/landing-page.html
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="ui center aligned sixteen wide column">
           <h1 class="landing-section-1-welcome">Welcome to UH Manoa TableTop Games Webpage</h1>
-
+          <img class="ui fluid image" src="/images/dragon.jpg">
           <h3 class="landing-section-1-tagline">Coordinating games to the University of Hawaii community</h3>
         </div>
       </div>
