--- a/app/imports/ui/pages/games/games-page-directory.html
+++ b/app/imports/ui/pages/games/games-page-directory.html
@@ -1,7 +1,7 @@
 <template name="Games_Page_Directory">
   <div style="margin-top: 20px" class="ui cards">
-    {{#each profile in profiles }}
-      {{> Directory_Profile profile=profile }}
+    {{#each category in categories }}
+      {{> Directory_Games category=category }}
     {{/each}}
   </div>
 </template>
