--- a/app/imports/ui/pages/user/manage-page.html
+++ b/app/imports/ui/pages/user/manage-page.html
@@ -6,7 +6,7 @@
       <div class="ui container">
         <a class="{{isActiveRoute " Games_Page"}} item" href="{{pathFor "Games_Page" username=routeUserName}}">Browse
         Games</a>
-        <a class="{{isActiveRoute " Profile_Page"}} item" href="{{pathFor "Profile_Page"
+        <a class="{{isActiveRoute " NewGame_Page"}} item" href="{{pathFor "NewGame_Page"
         username=routeUserName}}">Coordinate a Game!</a>
       </div>
     </div>
