--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="field">
-        <fieldset class="form-group">
+        <fieldset class="form-group" style="color: black">
           <legend>Game Category</legend>
           <div class="form-check">
             <label class="form-check-label">
