--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -1,10 +1,13 @@
-<template name="Games_Page">
+<template name="Games_Page" style="padding: 15%">
 
-  {{#if Template.subscriptionsReady}}
+  <div class="ui raised very padded inverted container segment" style="color: black; font-size: large">
+
+    {{#if Template.subscriptionsReady}}
     <div style="margin-top: 10px" class="ui menu">
 
       <form class="ui equal width form games-data-form">
-        <div class="field" style="align-content: center; color: black; font-size: large"> Choose from the game Categories
+        <div class="field" style="align-content: center; color: black; font-size: large"> Choose from the game
+          Categories
           {{> Checkbox_Form_Control label="" checkboxes=categories
           }}
         </div>
@@ -12,8 +15,106 @@
       </form>
 
       {{> Games_Page_Directory games=games }}
+    </div>
+    <div style="margin-top: 10px" class="ui menu">
+
+      <form class="ui equal width form games-data-form">
+        <div class="field" style="align-content: center; color: black; font-size: large"> Choose from the available card
+          games
+          <div class="ui checkbox">
+            <input type="checkbox" name="example1">
+            <label>Magic the Gathering</label>
+          </div>
+          <div class="ui checkbox">
+            <input type="checkbox" name="example2">
+            <label>Exploding Kittens</label>
+          </div>
+          <div class="ui checkbox">
+            <input type="checkbox" name="example3">
+            <label>Spades</label>
+          </div>
+        </div>
+        <button class="ui black circular button" type="submit">Filter</button>
+      </form>
+
+    </div>
+
+    <div style="margin-top: 10px" class="ui menu">
+
+      <form class="ui equal width form games-data-form">
+        <div class="field" style="align-content: center; color: black; font-size: large">
+          <div class="ui four column doubling stackable grid container">
+            <div class="column">
+              Exploding Kittens
+              <img class="ui small image" style="padding: 5px" src="/images/exkitten.png">
+              <button class="ui orange circular button" type="submit">Save Game</button>
+            </div>
+            <div class="column">
+              <div class="ui list">
+                <div class="item">
+                  <img class="ui avatar image" src="/images/johnson.jpg">
+                  <div class="content">
+                    <div class="header">max players</div>
+                    5
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/clock.png">
+                  <div class="content">
+                    <div class="header">Game length</div>
+                    30 min
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/bldg.png">
+                  <div class="content">
+                    <div class="header">Location</div>
+                    ICSpace - POST Bldg rm308
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="ui list">
+                <div class="item">
+                  <img class="ui avatar image" src="/images/smile.jpg">
+                  <div class="content">
+                    <div class="header">Contact</div>
+                    kodayv@hawaii.edu
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/comp.jpg">
+                  <div class="content">
+                    <div class="header">resources</div>
+                    <a href="https://www.explodingkittens.com/">explodingkittens.com</a>
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/calendar.jpg">
+                  <div class="content">
+                    <div class="header">When</div>
+                    05/01/2017 2:00 pm
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="ui list">
+                <div class="item">
+                  <div class="content">
+                    <div class="header">About</div>
+                    Come play a quick card game that is crazy and fun! It is really easy to learn and lots of laughs to be had! See sources for more details!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+
+    </div>
+    {{/if}}
+
   </div>
-  {{/if}}
-
-
 </template>
