--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -14,7 +14,7 @@
         <button class="ui black circular button" type="submit">Filter</button>
       </form>
 
-      {{> Games_Page_Directory games=games }}
+      <!--{{> Games_Page_Directory games=games }}-->
     </div>
     <div style="margin-top: 10px" class="ui menu">
 
