--- a/app/imports/ui/pages/user/manage-page.html
+++ b/app/imports/ui/pages/user/manage-page.html
@@ -1,8 +1,8 @@
 <template name="Manage_Page" xmlns="http://www.w3.org/1999/html">
-  <img class="ui floated image" style="height: 70px; padding-bottom: -20px" src="/images/dices.jpg">
+  <div class="ui raised very padded inverted container segment" style="color: black; font-size: large">
   <div class="ui borderless menu">
     <div class="ui container" style="height: 70px;">
-      <div class="item" ><h1>You have no Games on file!</h1></div>
+      <div class="item" ><h1>Manage Your Games!</h1></div>
       <div class=" item">
         <button class="ui button" > <a class="{{isActiveRoute "Games_Page"}} item" href="{{pathFor "Games_Page" username=routeUserName}}">Browse Games</a></button>
       </div>
@@ -12,5 +12,81 @@
     </div>
   </div>
 
+    <div style="margin-top: 10px" class="ui menu">
+
+      <form class="ui equal width form games-data-form">
+        <div class="field" style="align-content: center; color: black; font-size: large">
+          <div class="ui four column doubling stackable grid container">
+            <div class="column">
+              Exploding Kittens
+              <img class="ui small image" style="padding: 5px" src="/images/exkitten.png">
+              <button class="ui red circular button" type="submit">Remove Game</button>
+            </div>
+            <div class="column">
+              <div class="ui list">
+                <div class="item">
+                  <img class="ui avatar image" src="/images/johnson.jpg">
+                  <div class="content">
+                    <div class="header">max players</div>
+                    5
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/clock.png">
+                  <div class="content">
+                    <div class="header">Game length</div>
+                    30 min
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/bldg.png">
+                  <div class="content">
+                    <div class="header">Location</div>
+                    ICSpace - POST Bldg rm308
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="ui list">
+                <div class="item">
+                  <img class="ui avatar image" src="/images/smile.jpg">
+                  <div class="content">
+                    <div class="header">Contact</div>
+                    kodayv@hawaii.edu
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/comp.jpg">
+                  <div class="content">
+                    <div class="header">resources</div>
+                    <a href="https://www.explodingkittens.com/">explodingkittens.com</a>
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="ui avatar image" src="/images/calendar.jpg">
+                  <div class="content">
+                    <div class="header">When</div>
+                    05/01/2017 2:00 pm
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="ui list">
+                <div class="item">
+                  <div class="content">
+                    <div class="header">About</div>
+                    Come play a quick card game that is crazy and fun! It is really easy to learn and lots of laughs to be had! See sources for more details!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+
+    </div>
+  </div>
 
 </template>
