Finished Visual templates,

--- a/app/imports/ui/pages/user/welcome-page.html
+++ b/app/imports/ui/pages/user/welcome-page.html
@@ -1,5 +1,7 @@
 <template name="Welcome_Page">
 
+    <img class="ui fluid image" style="width:100%;" src="http://dnd.wizards.com/sites/default/files/media/styles/news_banner/public/images/news/BTS_Steaming_Icon.jpg?itok=s78xfuVI" >
+    <br>
 
     <h2 class="ui header">Welcome to the UH TableTop Game Webpage!</h2>
     <p>We are very excited to have you here! It is our goal to bring together students of UH together to play all types of games. </p>
