--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -48,7 +48,6 @@
               <div class="column">
                 Exploding Kittens
                 <img class="ui small image" style="padding: 5px" src="/images/exkitten.png">
-                <button class="ui orange circular button" type="submit">Save Game</button>
               </div>
               <div class="column">
                 <div class="ui list">
@@ -86,21 +85,21 @@
               <div class="column">
                 <div class="ui list">
                   <div class="item">
-                    <img class="ui avatar image" src="/images/smile.jpg">
+                    <i class="ui circular mail inverted big icon avatar image" ></i>
                     <div class="content">
                       <div class="header">Contact</div>
                       kodayv@hawaii.edu
                     </div>
                   </div>
                   <div class="item">
-                    <img class="ui avatar image" src="/images/comp.jpg">
+                    <i class="ui circular newspaper inverted big icon avatar image" ></i>
                     <div class="content">
                       <div class="header">resources</div>
                       <a href="https://www.explodingkittens.com/">explodingkittens.com</a>
                     </div>
                   </div>
                   <div class="item">
-                    <img class="ui avatar image" src="/images/calendar.jpg">
+                    <i class="ui circular calender inverted big icon avatar image" ></i>
                     <div class="content">
                       <div class="header">When</div>
                       05/01/2017 2:00 pm
