--- a/app/imports/ui/pages/user/manage-page.html
+++ b/app/imports/ui/pages/user/manage-page.html
@@ -21,7 +21,6 @@
             <div class="column">
               Exploding Kittens
               <img class="ui small image" style="padding: 5px" src="/images/exkitten.png">
-              <button class="ui orange circular button" type="submit">Save Game</button>
             </div>
             <div class="column">
               <div class="ui list">
@@ -59,21 +58,21 @@
             <div class="column">
               <div class="ui list">
                 <div class="item">
-                  <img class="ui avatar image" src="/images/smile.jpg">
+                  <i class="ui circular mail inverted big icon avatar image" ></i>
                   <div class="content">
                     <div class="header">Contact</div>
                     kodayv@hawaii.edu
                   </div>
                 </div>
                 <div class="item">
-                  <img class="ui avatar image" src="/images/comp.jpg">
+                  <i class="ui circular newspaper inverted big icon avatar image" ></i>
                   <div class="content">
                     <div class="header">resources</div>
                     <a href="https://www.explodingkittens.com/">explodingkittens.com</a>
                   </div>
                 </div>
                 <div class="item">
-                  <img class="ui avatar image" src="/images/calendar.jpg">
+                  <i class="ui circular calender inverted big icon avatar image" ></i>
                   <div class="content">
                     <div class="header">When</div>
                     05/01/2017 2:00 pm
@@ -85,8 +84,6 @@
               <div class="ui list">
                 <br>
                 <div class="item">
-
-                  <button class="ui button blue"> Join Us!</button>
                 </div>
                 <br>
                 <div class="item">
