--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -7,7 +7,7 @@
 
       {{> Radio_Form_Control label="Category" name="Category" required=true radios=categories errorMessage=(fieldError "category") }}
 
-      <button class="ui button"> <a class="{{isActiveRoute "NewGame_Role_Playing_Page"}} item" href="{{pathFor "NewGame_Role_Playing_Page" username=routeUserName}}">Submit</a></button>
+      <button class="ui button"> <a class="{{isActiveRoute "NewGame_Role_Playing_Page"}} item" href="{{pathFor route = "NewGame_Role_Playing_Page" username=routeUserName}}">Submit</a></button>
       {{#if displaySuccessMessage}}
         <div class="ui success message">
           <p>Data successful</p>
