--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -1,18 +1,113 @@
 <template name="NewGame_Page">
   <div class="ui text container segment">
     <div class="ui dividing header">
-      Create your own game group - Step One
+      Create your own game group
     </div>
-    <form class="ui equal width form profile-data-form {{ successClass }} {{ errorClass }}">
-
-      {{> Radio_Form_Control label="Category" name="Category" required=true radios=categories errorMessage=(fieldError "category") }}
-
-      <button class="ui button"> <a class="{{isActiveRoute "NewGame_Role_Playing_Page"}} item" href="{{pathFor route = "NewGame_Role_Playing_Page" username=routeUserName}}">Submit</a></button>
-      {{#if displaySuccessMessage}}
-        <div class="ui success message">
-          <p>Data successful</p>
+    <form class="ui equal width form game-data-form {{ successClass }} {{ errorClass }}">
+      <label>Category</label>
+      <hr/>
+      <form id='category-id'>
+        <input id='RPG' name='cat' type='radio'/> Role Playing Games<br/>
+        <input id='Card' name='cat' type='radio'/> Card Games<br/>
+        <input id='Board' name='cat' type='radio'/> Board Games<br/>
+        <input id='Mini' name='cat' type='radio'/> Miniatures<br/><br/>
+      </form>
+      <div id='rpg' style='display:none'>
+        <div class="fields">
+          {{> Select_Form_Control label="Role Playing Game Name" required=true options=gamesrpg errorMessage=(fieldError "gamesrpg") }}
+          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
         </div>
-      {{/if}}
+      </div>
+      <div id='card' style='display:none'>
+        <div class="fields">
+          {{> Select_Form_Control label="Card Game Name" required=true options=gamescard errorMessage=(fieldError "gamescard") }}
+          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+        </div>
+      </div>
+      <div id='board' style='display:none'>
+        <div class="fields">
+          {{> Select_Form_Control label="Board Game Name" required=true options=gamesboard errorMessage=(fieldError "gamesboard") }}
+          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+        </div>
+      </div>
+      <div id='mini' style='display:none'>
+        <div class="fields">
+          {{> Select_Form_Control label="Miniatures Game Name" required=true options=gamesmini errorMessage=(fieldError "gamesmini") }}
+          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+        </div>
+      </div>
+      <div id='dataFields' style='display:none'>
+        <div class="field">
+          {{> Select_Form_Control label="Approx. Length of Game (in Hours)" required=optional options=gameLength errorMessage=(fieldError "gameLength") }}
+          {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" required=true value=profile.picture errorMessage=(fieldError "picture")}}
+          {{> Checkbox_Form_Control label="Is Smoking Permitted?" checkboxes=smoking errorMessage=(fieldError "smoking") }}
+          {{> Checkbox_Form_Control label="Is Alcohol Permitted?" checkboxes=alcohol errorMessage=(fieldError "alcohol") }}
+        </div>
+        <div class="fields">
+          {{> Text_Form_Control label="Meeting Date" required=true options=interests placeholder="04/07/2017" errorMessage=(fieldError "days") multiple=true }}
+          {{> Text_Form_Control label="Meeting Time" required=true options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
+        </div>
+        <div class="field">
+          {{> Checkbox_Form_Control label="Is this Meeting reoccuring?" checkboxes=reoccurring }}
+        </div>
+        <div class="fields">
+          {{> Social_Network_Form_Control label="Contact" required=true icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
+          {{> Text_Form_Control label="Resources" placeholder="http://www.d20pfsrd.com/" errorMessage=(fieldError "resources") multiple=true }}
+        </div>
+
+        {{> TextArea_Form_Control label="About" value=profile.bio placeholder="Short statement about gameplay for those who never heard of game: Roleplaying game in which you play in a high-fantasy environment slaying monsters and solving puzzles. Required to bring: pencil. Optional: D20 dice set and $5.00 for pizza" errorMessage=(fieldError "about")}}
+      </div>
+      <div id='submitBtnRPG' style='display:none'>
+        <br/>
+        <button class="ui primary button" type="submit">Submit</button>
+        {{#if displaySuccessMessage}}
+          <div class="ui success message">
+            <p>Profile data successfully updated.</p>
+          </div>
+        {{/if}}
+      </div>
     </form>
   </div>
+  <script>
+    $(document).ready(function () {
+      $('input[type="radio"]').click(function () {
+        if ($(this).attr('id') == 'RPG') {
+          $('#rpg').show();
+          $('#dataFields').show();
+          $('#submitBtnRPG').show();
+          $('#card').hide();
+          $('#board').hide();
+          $('#mini').hide();
+        }
+        else if ($(this).attr('id') == 'Card') {
+          $('#card').show();
+          $('#dataFields').show();
+          $('#submitBtnRPG').hide();
+          //$('#submitbtn').show();
+          $('#rpg').hide();
+          $('#board').hide();
+          $('#mini').hide();
+        }
+        else if ($(this).attr('id') == 'Board') {
+            $('#board').show();
+            $('#dataFields').show();
+            $('#submitBtnRPG').hide();
+            //$('#submitBtnRPG').show();
+            $('#rpg').hide();
+            $('#card').hide();
+            $('#mini').hide();
+        }
+        else {
+            $('#mini').show();
+            $('#dataFields').show();
+            $('#submitBtnRPG').hide();
+            //$('#submitBtnRPG').show();
+            $('#rpg').hide();
+            $('#card').hide();
+            $('#board').hide();
+        }
+      });
+    });
+  </script>
 </template>
+
