updated landing page

--- a/app/imports/ui/pages/landing/landing-page.html
+++ b/app/imports/ui/pages/landing/landing-page.html
@@ -12,7 +12,7 @@
         <div class="ui center aligned sixteen wide column">
           <h1 class="landing-section-1-welcome">Welcome to UH Manoa TableTop Games Webpage</h1>
           <img class="ui fluid image" src="/images/dragon.jpg">
-          <h3 class="landing-section-1-tagline">Coordinating games to the University of Hawaii community</h3>
+          <h2 class="landing-section-1-tagline">Networking games to the University of Hawaii community</h2>
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
       </div>
       <div class="ui eight wide middle aligned column">
         <h1 class="landing-section-header">Find a gaming group.</h1>
-        <h1 class="landing-section-header">Start your own campaign.</h1>
+        <h1 class="landing-section-header">Coordinate your own game!.</h1>
       </div>
     </div>
   </div>
@@ -34,6 +34,8 @@
     <div class="ui grid">
       <div class="ui eight wide middle aligned column">
         <h1 class="landing-section-header">Enjoy an evening of fun with other students!</h1>
+        <h1 class="landing-section-header">Card Games <i class="trophy icon"></i> Role-playing Games <i class="trophy icon"></i> Board Games</h1>
+
       </div>
       <div class="ui eight wide column">
         <img class="ui centered rounded large image" src="/images/dice.jpg">
