working state. still making changes

--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -4,6 +4,7 @@
       <table style="margin-top: 20px" class="ui celled table">
         <thead>
         <tr>
+          <th>Player</th>
           <th>Category</th>
           <th>Game Title</th>
           <th>Max Players</th>
@@ -15,11 +16,10 @@
         <tbody>
         {{#each listing in ListingsList}}
           <tr>
+            <td>{{listing.username}}</td>
             <td>{{listing.category}}</td>
             <td>{{listing.gameName}}</td>
             <td>{{listing.maxPlayers}}</td>
-
-
           </tr>
         {{/each}}
         </tbody>
