dropdowns do not work

--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -1,6 +1,7 @@
 <template name="Browse_Page">
   <div class="ui container">
-    {{#if Template.subscriptionsReady}}
+    <h4>Test</h4>
+    {{#if Listings.subscriptionsReady}}
       <table style="margin-top: 20px" class="ui celled table">
         <thead>
         <tr>
