--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -14,25 +14,25 @@
       </form>
       <div id='rpg' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Role Playing Game Name" required=true options=gamesrpg errorMessage=(fieldError "game") }}
+          {{> Select_Form_Control label="Role Playing Game Name" required=true options=gamesrpg errorMessage=(fieldError "games") }}
           {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
       <div id='card' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Card Game Name" required=true options=gamescard errorMessage=(fieldError "game") }}
+          {{> Select_Form_Control label="Card Game Name" required=true options=gamescard errorMessage=(fieldError "games") }}
           {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
       <div id='board' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Board Game Name" required=true options=gamesboard errorMessage=(fieldError "game") }}
+          {{> Select_Form_Control label="Board Game Name" required=true options=gamesboard errorMessage=(fieldError "games") }}
           {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
       <div id='mini' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Miniatures Game Name" required=true options=gamesmini errorMessage=(fieldError "game") }}
+          {{> Select_Form_Control label="Miniatures Game Name" required=true options=gamesmini errorMessage=(fieldError "games") }}
           {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
@@ -57,7 +57,9 @@
 
         {{> TextArea_Form_Control label="About" value=profile.bio placeholder="Short statement about gameplay for those who never heard of game: Roleplaying game in which you play in a high-fantasy environment slaying monsters and solving puzzles. Required to bring: pencil. Optional: D20 dice set and $5.00 for pizza" errorMessage=(fieldError "about")}}
         <br/>
-        <button class="ui large primary button" type="submit">Submit</button>
+        <div id='submitBtnRPG' style='display:none'>
+          <button class="ui large primary button" type="submit">Submit</button>
+        </div>
         {{#if displaySuccessMessage}}
           <div class="ui success message">
             <p>Profile data successfully updated.</p>
@@ -72,38 +74,40 @@
         if ($(this).attr('id') == 'RPG') {
           $('#rpg').show();
           $('#dataFields').show();
-        //  $('#submitBtnRPG').show();
+          //  $('#submitBtnRPG').show();
           $('#card').hide();
           $('#board').hide();
           $('#mini').hide();
         }
-        else if ($(this).attr('id') == 'Card') {
-          $('#card').show();
-          $('#dataFields').show();
-          //$('#submitBtnRPG').hide();
-          //$('#submitbtn').show();
-          $('#rpg').hide();
-          $('#board').hide();
-          $('#mini').hide();
-        }
-        else if ($(this).attr('id') == 'Board') {
-            $('#board').show();
+        else
+          if ($(this).attr('id') == 'Card') {
+            $('#card').show();
             $('#dataFields').show();
             //$('#submitBtnRPG').hide();
-            //$('#submitBtnRPG').show();
+            //$('#submitbtn').show();
             $('#rpg').hide();
-            $('#card').hide();
-            $('#mini').hide();
-        }
-        else {
-            $('#mini').show();
-            $('#dataFields').show();
-            //$('#submitBtnRPG').hide();
-            //$('#submitBtnRPG').show();
-            $('#rpg').hide();
-            $('#card').hide();
             $('#board').hide();
-        }
+            $('#mini').hide();
+          }
+          else
+            if ($(this).attr('id') == 'Board') {
+              $('#board').show();
+              $('#dataFields').show();
+              //$('#submitBtnRPG').hide();
+              //$('#submitBtnRPG').show();
+              $('#rpg').hide();
+              $('#card').hide();
+              $('#mini').hide();
+            }
+            else {
+              $('#mini').show();
+              $('#dataFields').show();
+              //$('#submitBtnRPG').hide();
+              //$('#submitBtnRPG').show();
+              $('#rpg').hide();
+              $('#card').hide();
+              $('#board').hide();
+            }
       });
     });
   </script>
