--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -74,7 +74,7 @@
         if ($(this).attr('id') == 'RPG') {
           $('#rpg').show();
           $('#dataFields').show();
-          //  $('#submitBtnRPG').show();
+          $('#submitBtnRPG').show();
           $('#card').hide();
           $('#board').hide();
           $('#mini').hide();
