more changes. submit button does not work.

--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -1,11 +1,9 @@
 <template name="Browse_Page">
   <div class="ui container">
-    <h4>Test</h4>
-    {{#if Listings.subscriptionsReady}}
+    {{#if Template.subscriptionsReady}}
       <table style="margin-top: 20px" class="ui celled table">
         <thead>
         <tr>
-          <th>Player</th>
           <th>Category</th>
           <th>Game Title</th>
           <th>Max Players</th>
@@ -17,7 +15,6 @@
         <tbody>
         {{#each listing in ListingsList}}
           <tr>
-            <td>{{listing.username}}</td>
             <td>{{listing.category}}</td>
             <td>{{listing.gameName}}</td>
             <td>{{listing.maxPlayers}}</td>
@@ -28,5 +25,6 @@
     {{else}}
       {{> Loading}}
     {{/if}}
+
   </div>
 </template>
