--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -7,39 +7,41 @@
       <label>Category</label>
       <hr/>
       <form id='category-id'>
-        <input id='RPG' name='cat' type='radio'/> Role Playing Games<br/>
-        <input id='Card' name='cat' type='radio'/> Card Games<br/>
-        <input id='Board' name='cat' type='radio'/> Board Games<br/>
-        <input id='Mini' name='cat' type='radio'/> Miniatures<br/><br/>
+        <input id='RPG' label='Category' type='radio' name='cat'/> Role Playing Games<br/>
+        <input id='Card' label='Category' type='radio' name='cat'/> Card Games<br/>
+        <input id='Board' label='Category' type='radio' name='cat'/> Board Games<br/>
+        <input id='Mini' label='Category' type='radio' name='cat'/> Miniatures<br/><br/>
       </form>
       <div id='rpg' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Role Playing Game Name" required=true options=gamesrpg errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Game" required=true options=gamesrpg errorMessage=(fieldError "games") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
       <div id='card' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Card Game Name" required=true options=gamescard errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Game" required=true options=gamescard errorMessage=(fieldError "games") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
       <div id='board' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Board Game Name" required=true options=gamesboard errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Game" required=true options=gamesboard errorMessage=(fieldError "games") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
       <div id='mini' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Miniatures Game Name" required=true options=gamesmini errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Max players" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Game" required=true options=gamesmini errorMessage=(fieldError "games") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
         </div>
       </div>
-      <div id='dataFields' style='display:none' {{ errorClass }}>
-        <div class="field">
+      <div id='dataFields' style='display:none'>
+        <div class="fields">
           {{> Select_Form_Control label="Approx. Length of Game (in Hours)" required=optional options=gameLength errorMessage=(fieldError "gameLength") }}
           {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" required=true value=profile.picture errorMessage=(fieldError "picture")}}
+        </div>
+        <div class="fields">
           {{> Checkbox_Form_Control label="Is Smoking Permitted?" checkboxes=smoking errorMessage=(fieldError "smoking") }}
           {{> Checkbox_Form_Control label="Is Alcohol Permitted?" checkboxes=alcohol errorMessage=(fieldError "alcohol") }}
         </div>
@@ -48,33 +50,26 @@
           {{> Text_Form_Control label="Meeting Time" required=true options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
         </div>
         <div class="field">
-          {{> Checkbox_Form_Control label="Is this Meeting reoccuring?" checkboxes=reoccurring }}
+          {{> Checkbox_Form_Control label="Is this Meeting recurring?" checkboxes=recurring errorMessage=(fieldError "recurring") }}
         </div>
         <div class="fields">
           {{> Social_Network_Form_Control label="Contact" required=true icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
           {{> Text_Form_Control label="Resources" placeholder="http://www.d20pfsrd.com/" errorMessage=(fieldError "resources") multiple=true }}
         </div>
-
+        <div class="field">
         {{> TextArea_Form_Control label="About" value=profile.bio placeholder="Short statement about gameplay for those who never heard of game: Roleplaying game in which you play in a high-fantasy environment slaying monsters and solving puzzles. Required to bring: pencil. Optional: D20 dice set and $5.00 for pizza" errorMessage=(fieldError "about")}}
-        <br/>
-        <div id='submitBtnRPG' style='display:none'>
-          <button class="ui large primary button" type="submit">Submit</button>
-        </div>
-        {{#if displaySuccessMessage}}
-          <div class="ui success message">
-            <p>Profile data successfully updated.</p>
-          </div>
-        {{/if}}
       </div>
-    </form>
+      <br/>
+      <button class="ui primary button" type="submit">Submit</button>
   </div>
+  </form>
   <script>
     $(document).ready(function () {
       $('input[type="radio"]').click(function () {
         if ($(this).attr('id') == 'RPG') {
           $('#rpg').show();
           $('#dataFields').show();
-          $('#submitBtnRPG').show();
+          //$('#submitBtnRPG').show();
           $('#card').hide();
           $('#board').hide();
           $('#mini').hide();
@@ -111,5 +106,5 @@
       });
     });
   </script>
+  </div>
 </template>
-
