--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -1,30 +1,31 @@
 <template name="Browse_Page">
-  <div class="ui container">
-    {{#if Template.subscriptionsReady}}
-      <table style="margin-top: 20px" class="ui celled table">
-        <thead>
-        <tr>
-          <th>Category</th>
-          <th>Game Title</th>
-          <th>Max Players</th>
-
-          <th>Edit</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        {{#each listing in ListingsList}}
+  {{#If_Logged_In}}
+    <div class="ui container">
+      {{#if Template.subscriptionsReady}}
+        <table style="margin-top: 20px" class="ui celled table">
+          <thead>
           <tr>
-            <td>{{listing.category}}</td>
-            <td>{{listing.gameName}}</td>
-            <td>{{listing.maxPlayers}}</td>
-          </tr>
-        {{/each}}
-        </tbody>
-      </table>
-    {{else}}
-      {{> Loading}}
-    {{/if}}
+            <th>Category</th>
+            <th>Game Title</th>
+            <th>Max Players</th>
 
-  </div>
+            <th>Edit</th>
+          </tr>
+          </thead>
+
+          <tbody>
+          {{#each listing in listingsList}}
+            <tr>
+              <td>{{listing.category}}</td>
+              <td>{{listing.gameName}}</td>
+              <td>{{listing.maxPlayers}}</td>
+            </tr>
+          {{/each}}
+          </tbody>
+        </table>
+      {{else}}
+        {{> Loading}}
+      {{/if}}
+    </div>
+  {{/If_Logged_In}}
 </template>
