morning changes. listing seeds works

--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -1,6 +1,6 @@
 <template name="Browse_Page">
   {{#If_Logged_In}}
-    <div class="ui container">
+    <div class="ui text container">
       {{#if Template.subscriptionsReady}}
         <table style="margin-top: 20px" class="ui celled table">
           <thead>
