--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -4,9 +4,9 @@
       Create your own game group
     </div>
     <form class="ui equal width form game-data-form {{ errorClass }}">
-      <label>Category</label>
+      <label style="color:black">Category</label>
       <hr/>
-      <form id='category-id'>
+      <form id='category-id' style='color:black'>
         <input id='RPG' label='Category' type='radio' name='cat'/> Role Playing Games<br/>
         <input id='Card' label='Category' type='radio' name='cat'/> Card Games<br/>
         <input id='Board' label='Category' type='radio' name='cat'/> Board Games<br/>
